# tumelo

./: Makefile  README.md  pyproject.toml  recommendations.db
scripts/: createDb.py  loadDataToDb.py
src/: app.py
src/models/: proposals.py
src/orm/: orm.py
test/: conftest.py  test_E2E.py
testData/: Example Recommendations[67].csv  badRecommendations.csv  cleanedRecommendations.csv  duplicatedRows.csv
